# Drew-Test-Project

./: Project Idea.md  README.md
valorant-analyzer/: README.md  pyproject.toml  requirements.txt
valorant-analyzer/app/: main.py
valorant-analyzer/app/agents/: audio.py  backend.py  coach.py  frontend.py  infra.py  interviewer.py  marketing.py  vision.py
valorant-analyzer/frontend/: README.md  app.js  index.html  styles.css
valorant-analyzer/tests/: test_agents.py  test_interview_marketing.py
