[tool.poetry]
name = "valorant-analyzer"
version = "0.1.0"
description = "Starter scaffold: multi-agent system to analyze Valorant gameplay (VODs + live)."
authors = ["Drew <drewwhite@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
